# kostka-cube

./: Cargo.toml  LICENSE  README.md  corners.py
cube-core/: Cargo.toml
cube-core/src/cube/: cube.rs  mod.rs  slice.rs  slice_builder.rs
cube-core/src/cube/core/: grid.rs  mod.rs  scramble.rs
cube-core/src/game/: game.rs  render.rs
cube-core/src/utils/: cube_utils.rs  geometry.rs  mod.rs
cube-game/: Cargo.toml
cube-game/src/: args.rs  controls.rs  draw.rs  game.rs  lib.rs  main.rs  render.rs  timer.rs
cube-tui/: Cargo.toml
cube-tui/src/: main.rs
src/: cube.rs  cube_utils.rs  game.rs  geometry.rs  grid.rs  lib.rs  main.rs  scramble.rs  screen.rs  slice.rs
src/cube/: slice.rs
src/cube/core/: grid.rs
src/utils/: geometry.rs
