[package]
name = "kostka"
version = "1.0.0"
authors = ["hejsztynx"]
edition = "2024"
description = "Simple and lightweight Rubik's cube simulator"
license = "MIT"
repository = "https://github.com/hejsztynx/kostka-cube"
readme = "../README.md"

[dependencies]
cube-core = "0.3.0"
clap = { version = "4", features = ["derive"] }
rusttype = "0.9"
log = "0.4"
error-iter = "0.4"
pixels = "0.15"
winit = "0.29"
winit_input_helper = "0.15"
env_logger = "0.10"
game-loop = { version = "=1.1.0", features = ["winit"] }